--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -1,1 +1,13 @@
-
+{
+  "title": "KaizokuHunter",
+  "subtitle": "Start Hunting!",
+  "caughtCount": "Caught {{count}} infringements",
+  "protectedCreators": "Protected {{count}} creators",
+  "ctaGoHunt": "Go to Dashboard",
+  "pricingTitle": "Pricing Plans",
+  "freePlan": "Free Plan",
+  "advancedPlan": "Advanced Plan",
+  "proPlan": "Pro Plan",
+  "enterprisePlan": "Enterprise",
+  "bigCorpPlan": "Large Brand"
+}
