--- a/frontend/src/i18n/ja.json
+++ b/frontend/src/i18n/ja.json
@@ -1,13 +1,6 @@
 {
-  "title": "海賊ハンター侵害撲滅",
-  "subtitle": "狩りを始めましょう！",
-  "caughtCount": "{{count}}件の侵害を撃破",
-  "protectedCreators": "{{count}}人のクリエイターを保護",
-  "ctaGoHunt": "ダッシュボードへ",
-  "pricingTitle": "プラン一覧",
-  "freePlan": "無料プラン",
-  "advancedPlan": "アドバンスプラン",
-  "proPlan": "プロプラン",
-  "enterprisePlan": "エンタープライズ",
-  "bigCorpPlan": "大型ブランド向け"
+  "siteTitle": "ハンターX",
+  "caughtCount": "検出された侵害件数：{{count}}",
+  "protectedCreators": "保護されたクリエイター数：{{count}}",
+  "startHunt": "ハント開始"
 }
